# pytest-executable

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  meta.yaml  mpi_runner.sh  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
LICENSES/headers/: apache.txt
doc/: api.rst  cli.rst  conf.py  fixtures.rst  how-to-use.rst  index.rst  installation.rst  post-processing.rst  requirements.txt  test-case.rst  test_case_yaml.rst  test_executable.rst  usage.rst
pytest_executable/: _version.py  file_tools.py  plugin.py  report-db-schema.yaml  report.py  script_runner.py  test_case-schema.yaml  test_case.yaml  test_case_yaml.py
report-conf/: conf.py  generate_report.py  index_template.rst
src/pytest_executable/: __init__.py  _version.py  file_tools.py  plugin.py  report-db-schema.yaml  report.py  script_runner.py  settings.py  test-settings-schema.yaml  test-settings.yaml  test_case-schema.yaml  test_case_yaml.py  test_executable.py  yaml_helper.py
tests/: __init__.py  conftest.py  test_file_tools.py  test_report.py  test_run_script.py  test_script_runner.py  test_settings.py
tests/data/collect_order/z/: test_aa.py
tests/data/report/: report_db.yaml
tests/data/runners/: error.sh  nproc.sh
tests/data/shallow_dir_copy/dst_dir/: file
tests/data/shallow_dir_copy/dst_dir/dir/: file
tests/data/test_logs/tests-output-non-empty-err.ko/case/: executable.stdout
tests/data/test_marks_from_yaml/: test_case.yaml  test_dummy.py
tests/data/test_marks_from_yaml/tests-inputs/: test_dummy.py
tests/data/test_marks_from_yaml/tests-inputs/a/: __init__.py  test_dummy.py
tests/data/test_no_lbpost/tests-inputs/case/: test_case.yaml
tests/data/test_regression_file_path_fixture/tests-inputs/case/: test_fixture.py
tests/data/test_regression_path_fixture/tests-inputs/case/: test_fixture.py
tests/data/test_report/report/: generator-ko.sh  generator.sh
tests/data/test_runner_fixture/: runner.sh  settings.yaml
tests/data/test_runner_fixture/tests-inputs/case_nproc/: test_case.yaml
tests/data/test_tolerances_fixture/tests-inputs/case/: test-settings.yaml  test_fixture.py
tests/data/test_write_fields_error/references/case/: hexa-1.h5  hexa-1.xmf
tests/data/test_write_fields_error/tests-inputs/case/: hexa-1.h5
tests/test_plugin/: __init__.py  test_fixtures.py  test_misc.py  test_report.py
