# setuptools settings
# See https://python-packaging-user-guide.readthedocs.io for more details.
[metadata]
name = pytest_executable
author = Antoine Dechaume
author_email = https://github.com/AntoineD
url = https://www.github.com/CS-SI/pytest-executable
description = pytest plugin for testing executables
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE.txt
classifiers =
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Framework :: Pytest
    License :: OSI Approved :: Apache Software License

[options]
package_dir=
    =src
packages = pytest_executable
include_package_data = True
python_requires = >= 3.6
install_requires =
    pytest >=4.3,<6
    PyYAML >=3,<6
    jsonschema >=2,<4
    jinja2 >=2
    dataclasses;python_version<'3.7'

[options.entry_points]
pytest11 =
    pytest_executable = pytest_executable.plugin

# tools settings

[versioneer]
VCS = git
style = pep440
versionfile_source = src/pytest_executable/_version.py
versionfile_build = pytest_executable/_version.py
tag_prefix =

[coverage:run]
omit = */_version.py
branch = True

[flake8]
# See http://www.pydocstyle.org/en/latest/error_codes.html for more details.
ignore =
# D105 Missing docstring in magic method
       D105,
# D107 Missing docstring in __init__: because we use google style docstring in class.
       D107,
# D202 No blank lines allowed after function docstring, follow black again
       D202,
# D413 Missing blank line after last section: see above.
       D413,
# E501 line too long, use bugbear warning instead, see https://github.com/psf/black#line-length
       E501,
# W503 line break before binary operator, follow black again
       W503,
# E203 whitespace before ':', follow black again
       E203,
# C812 missing trailing comma, follow black
       C812,
# C815 missing trailing comma in Python 3.5+, follow black
       C815,
# missing trailing comma in Python 3.6+, follow black
       C816
exclude = src/pytest_executable/_version.py, tests/data
max-line-length = 80
select = B,C,D,E,F,W,B950

[pydocstyle]
convention=google

[mypy]
files = src/pytest_executable, tests
python_version = 3.7
warn_unused_configs = True
# disallow_subclassing_any = True
disallow_any_generics = True
disallow_untyped_calls = True
# disallow_untyped_defs = True
disallow_incomplete_defs = True
# check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
# warn_return_any = True
# no_implicit_reexport = True

[mypy-numpy,pytest,_pytest.*,py,setuptools,jsonschema]
ignore_missing_imports = True

[mypy-pytest_executable._version]
ignore_errors = True

[isort]
# settings from black, for compatibility with black
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
