[metadata]
name = pytest-executable
author = Antoine Dechaume
url = https://www.github.com/CS-SI/pytest-executable
description = pytest plugin for testing executables
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache Software License 2.0
license_files = LICENSE.txt
classifiers =
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Topic :: Utilities
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Framework :: Pytest
    License :: OSI Approved :: Apache Software License

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.7,<3.12
install_requires =
    pytest >=4.3,<8
    pyyaml >=3,<6.1
    jsonschema >=2,<5
    jinja2 >=2.7,<3.2
    delta >=0.4,<0.5

[options.packages.find]
where = src

[options.extras_require]
test =
    covdefaults
    pytest-cov

[options.entry_points]
pytest11 =
    pytest_executable = pytest_executable.plugin

# tools settings

[tool:pytest]
testpaths = tests
addopts =
    --ignore tests/data
filterwarnings =
    ignore::pytest.PytestExperimentalApiWarning

[coverage:run]
plugins = covdefaults
source = pytest_executable

[coverage:report]
# Override covdefaults.
fail_under = 90

[flake8]
# See http://www.pydocstyle.org/en/latest/error_codes.html for more details.
ignore =
# D105 Missing docstring in magic method
       D105,
# D107 Missing docstring in __init__: because we use google style docstring in class.
       D107,
# D413 Missing blank line after last section: see above.
       D413,
# E501 line too long, use bugbear warning instead, see https://github.com/psf/black#line-length
       E501,
exclude = tests/data
max-line-length = 88
select = B,C,E,F,G,N,T,W,B950
docstring-convention = google

[mypy]
;files = src/pytest_executable, tests
;exclude = (tests/data|report-conf)
python_version = 3.7
warn_unused_configs = True
disallow_subclassing_any = True
disallow_any_generics = True
disallow_untyped_calls = True
# disallow_untyped_defs = True
disallow_incomplete_defs = True
# check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
# warn_return_any = True
no_implicit_reexport = True

[mypy-numpy,pytest,_pytest.*,py,setuptools,jsonschema,delta]
ignore_missing_imports = True
